lab3/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress-2
spec:
  rules:
    - host: localhost-kirill.com
      http:
        paths:
          - backend:
              service:
                name: web-server-service-2
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - localhost-kirill.com
      secretName: tls-secret
